# py3dcam

./: fps_demo.py  pyproject.toml
